Fix issue where caret alignment was off on Safari

--- a/src/portals/HackathonPortal/apps/DrReShellApp/components/InputWithCustomCaret/InputWithCustomCaret.module.css
+++ b/src/portals/HackathonPortal/apps/DrReShellApp/components/InputWithCustomCaret/InputWithCustomCaret.module.css
@@ -2,10 +2,6 @@
   position: relative;
 }
 
-input.input-with-custom-caret {
-  caret-color: transparent;
-}
-
-.input-with-custom-caret.wrapper .caret-wrapper {
-  position: absolute;
+input {
+  opacity: 0;
 }
